2000-10-04  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* gnus-sum.el (gnus-build-sparse-threads): Use
	`make-full-mail-header-from-decoded-header' instead of
	`make-full-mail-header'.

2000-10-03  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-group.el (gnus-group-get-new-news): Update modeline
	using `gnus-agent-toggle-plugged' if agent is activated.
	* lisp/gnus-agent.el (gnus-group-get-new-news): Don't advise it,
	merge it into gnus-group.el instead.

	* lisp/gnus-offline.el (gnus-offline-after-jobs-done): Use `ding'
	with `play-sound-file' for XEmacs statically.

	* lisp/gnus-art.el (gnus-article-add-button): Quote
	`:button-keymap' for Mule 2.3 but it won't work.

	* lisp/dgnushack.el: (dgnushack-compile): Don't compile
	dgnushack.el nor lpath.el.

2000-09-29  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-ignored-supersedes-headers): Synch with
	Gnus.

2000-09-25  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.

	* texi/gnus-faq-ja.texi, lisp/gnus.el, README.semi.ja, README.semi,
	README: Replace "<semi-gnus-*@meadow.scphys.kyoto-u.ac.jp>" with
	"<semi-gnus-*@meadowy.org>".

2000-09-19  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-copy-article-buffer): Encode bitmap
	smileys to ordinary text before removing any text properties.  It
	is synchronized with the latest smiley-mule.el.

2000-09-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Follow URL change
	of `ZDNet'.

2000-09-15   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-art.el: Always require `wid-edit'.

2000-09-14  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-add-button): Add widget button.
	(gnus-article-display-mime-message): Don't set
	`mime-button-mother-dispatcher'.

2000-09-07  Tadashi Watanabe  <watanabe@sigmaitec.co.jp>

	* lisp/smiley.el (smiley-buffer, smiley-create-glyph): Work with
	GTK XEmacs as well.
