@@ -617,10 +617,11 @@ the resulting string may be narrower than END-COLUMN.
 		(concat " (r" gnus-revision-number ")"))
 	      " based on " gnus-original-product-name " v"
 	      gnus-original-version-number "\n")
-      (goto-char (point-min))
-      (put-text-property (point) (gnus-point-at-eol) 'face 'gnus-splash-face)
-      (insert-char ?\ ; space
-		   (max 0 (/ (- (window-width) (gnus-point-at-eol)) 2)))
+      (end-of-line 0)
+      (put-text-property (point-min) (point) 'face 'gnus-splash-face)
+      (insert-char ?\  (prog1
+			   (max 0 (/ (- (window-width) (point)) 2))
+			 (goto-char (point-min))))
       (forward-line 1)
       (insert-char ?\n rest)
       (set-window-start (selected-window) (point-min))))
@@ -653,9 +654,9 @@ the resulting string may be narrower than END-COLUMN.
 	      (concat " (r" gnus-revision-number ")"))
 	    " based on " gnus-original-product-name " v"
 	    gnus-original-version-number)
-    (goto-char (point-min))
-    (insert-char ?\ ; space
-		 (max 0 (/ (- (window-width) (gnus-point-at-eol)) 2)))
+    (insert-char ?\  (prog1
+			 (max 0 (/ (- (window-width) (point)) 2))
+		       (goto-char (point-min))))
     (forward-line 1)
     ;; And then hack it.
     (gnus-indent-rigidly (point) (point-max)
